# CSE320

hw1/include/: addedfun.h
hw1/src/: main.c  transplant.c
hw2/: CMakeLists.txt  CMakeLists_backup.txt  Makefile
hw2/include/: datadef.h  rolodefs.h
hw2/include/toolsdir/: args.h  ctools.h  menu.h
hw2/src/: clear.c  io.c  menuaux.c  operations.c  options.c  rlist.c  rolo.c  search.c  update.c
hw2/src/toolsdir/: args.c  ctools.c  mem.c  menu.c
hw2/tests/: base_tests.c
hw2/tests/rsrc/: valgrind_leak_test.in  valgrind_update_test.in
hw3/: CMakeLists.txt
hw3/include/: sfmm.h
hw3/src/: sfmm.c
hw3/tests/: sfmm_tests.c
hw4/: CMakeLists.txt  Makefile
hw4/include/: handler.h  jobber.h
hw4/src/: handler.c  jobs.c  main.c  task.c
hw4/tests/: hw4_tests.c
hw5/: CMakeLists.txt  valgrind.out
hw5/include/: client.h  exchange_struct.h  matchmaking.h  server.h  trader_struct.h
hw5/src/: client_registry.c  exchange.c  main.c  matchmaking.c  protocol.c  server.c  trader.c
